added fix to reviewers

--- a/notes_stuff/reviewers.html
+++ b/notes_stuff/reviewers.html
@@ -200,168 +200,14 @@
   <script src="https://apis.google.com/js/api.js"></script>
   <script src="https://accounts.google.com/gsi/client" async defer></script>
 
-  <script>
-    // === CONFIG ===
-    const developerKey = "AIzaSyCdVmlenk3Qvp1h0TSsIN-_YSN-8IpiQFk";
-    const clientId = "661671724651-g991at5eiurrroi8aojjnmj8jit9agas.apps.googleusercontent.com";
-    const appId = "661671724651";
-    const scope = "https://www.googleapis.com/auth/drive.file";
+  <script src = "js/picker.js"></script>
 
-    let oauthToken;
-    let tokenClient;
-    let pickerApiLoaded = false;
-    let selectedFiles = [];
-    let allReviewers = [];
-
-    // === INIT LIBRARIES ===
-    function gapiLoaded() {
-      gapi.load("picker", () => {
-        pickerApiLoaded = true;
-      });
-    }
-
-    function gisLoaded() {
-      tokenClient = google.accounts.oauth2.initTokenClient({
-        client_id: clientId,
-        scope: scope,
-        callback: () => {}
-      });
-    }
-
-    // === AUTH + PICKER ===
-    function handleAuthClick() {
-      if (!tokenClient) return;
-      tokenClient.callback = (tokenResponse) => {
-        if (tokenResponse.error) return;
-        oauthToken = tokenResponse.access_token;
-        createPicker();
-      };
-      tokenClient.requestAccessToken({ prompt: "consent" });
-    }
-
-    function createPicker() {
-      if (!pickerApiLoaded || !oauthToken) return;
-      const view = new google.picker.DocsView(google.picker.ViewId.DOCS)
-        .setIncludeFolders(true)
-        .setSelectFolderEnabled(true);
-
-      const picker = new google.picker.PickerBuilder()
-        .enableFeature(google.picker.Feature.MULTISELECT_ENABLED)
-        .setAppId(appId)
-        .setOAuthToken(oauthToken)
-        .setDeveloperKey(developerKey)
-        .addView(view)
-        .setCallback(pickerCallback)
-        .build();
-
-      picker.setVisible(true);
-    }
-
-    async function pickerCallback(data) {
-      if (data.action === google.picker.Action.PICKED) {
-        const docs = data.docs;
-        selectedFiles = docs.map(doc => ({
-          id: doc.id,
-          name: doc.name,
-          mimeType: doc.mimeType
-        }));
-
-        const fileList = document.getElementById("pickedFiles");
-        fileList.innerHTML = "";
-        selectedFiles.forEach(file => {
-          const li = document.createElement("li");
-          li.textContent = `${file.name} (${file.id})`;
-          fileList.appendChild(li);
-        });
-      }
-    }
-
-    // === FETCH REVIEWERS ===
-    function renderReviewers(list) {
-      const reviewers = document.getElementById("reviewers");
-      reviewers.innerHTML = "";
-      list.forEach(reviewer => {
-        const li = document.createElement("li");
-        li.innerHTML = `<a href="./reviewer.html?id=${reviewer.id}">${reviewer.title}</a>
-                        <div><small>By ${reviewer.creator} • ${reviewer.subject} • ${reviewer.date_added ? new Intl.DateTimeFormat('en-US', { year: 'numeric', month: 'long', day: 'numeric' }).format(new Date(reviewer.date_added)) : ""}</small></div>`;
-        reviewers.appendChild(li);
-      });
-    }
-
-    fetch("/api/reviewers")
-      .then(response => response.json())
-      .then(data => {
-        allReviewers = data;
-        renderReviewers(allReviewers);
-      });
-
-    // === FILTERS & SEARCH ===
-    function applyFilters() {
-      const search = document.getElementById("search").value.toLowerCase();
-      const creator = document.getElementById("filterCreator").value.toLowerCase();
-      const subject = document.getElementById("filterSubject").value;
-      const date = document.getElementById("filterDate").value;
-
-      const filtered = allReviewers.filter(r => {
-        const matchesSearch = r.title.toLowerCase().startsWith(search);
-        const matchesCreator = creator ? r.creator.toLowerCase().includes(creator) : true;
-        const matchesSubject = subject ? r.subject === subject : true;
-        const matchesDate = date ? r.date_added && r.date_added.startsWith(date) : true;
-        return matchesSearch && matchesCreator && matchesSubject && matchesDate;
-      });
-
-      renderReviewers(filtered);
-    }
-
-    document.getElementById("search").addEventListener("input", applyFilters);
-    document.getElementById("filterCreator").addEventListener("input", applyFilters);
-    document.getElementById("filterSubject").addEventListener("change", applyFilters);
-    document.getElementById("filterDate").addEventListener("change", applyFilters);
-
-    window.onload = () => {
-      gapiLoaded();
-      gisLoaded();
-    };
-  </script>
+  <!-- Review submission and viewing -->
+  <script src="js/handleSubmit.js"></script>
+  <script src = "js/reviewers.js"></script>
 
   <section>
-    <script>
-      function handleSubmit(event) {
-        event.preventDefault();
-        const name = document.getElementById("name").value;
-        const title = document.getElementById("title").value;
-        const subject = document.getElementById("subject").value;
-        const description = document.getElementById("description").value;
-
-        const reviewData = {
-          creator: name,
-          title: title,
-          subject: subject,
-          description: description,
-          reviewer: JSON.stringify(selectedFiles)
-        };
-
-        fetch('/api/reviewers/new', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(reviewData)
-        })
-        .then(response => response.json())
-        .then(data => {
-          // Reset
-          document.getElementById("name").value = "";
-          document.getElementById("title").value = "";
-          document.getElementById("subject").value = "";
-          document.getElementById("description").value = "";
-          document.getElementById("pickedFiles").innerHTML = "";
-          selectedFiles = [];
-
-          allReviewers.push(data);
-          renderReviewers(allReviewers);
-        })
-        .catch(err => console.error('Error:', err));
-      }
-    </script>
+    
 
     <!-- Picked Files -->
     <ul id="pickedFiles"></ul>
