--- a/notes_stuff/reviewer.html
+++ b/notes_stuff/reviewer.html
@@ -3,118 +3,230 @@
 <head>
   <meta charset="UTF-8" />
   <title>Reviewer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
-    html, body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
+      @font-face {
+        font-family: 'Mangro';
+        src: url('/fonts/mangro.otf') format('opentype');
+        font-weight: normal;
+        font-style: normal;
     }
+      @font-face {
+        font-family: "AniTypewriter";
+        src: url('/fonts/AniTypewriter.ttf') format('truetype');
+        font-weight: normal;
+        font-style: normal;
+      }
+    /* === General Reset === */
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  font-family: 'AniTypewriter', sans-serif;
+  font-size: 13px;
+  background: #f9f8f5;
+  color: #333;
+  display: flex;
+  flex-direction: column;
+}
 
-    header {
-      padding: 15px;
-      border-bottom: 1px solid #ccc;
-      background: #f8f8f8;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      flex-shrink: 0;
-    }
+/* === Header === */
+header {
+  padding: 15px 20px;
+  background: #C7B693;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-shrink: 0;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
 
-    header h1 { margin: 0; font-size: 20px; }
-    header p { margin: 5px 0 0; font-size: 14px; color: #555; }
+header h1 {
+  margin: 0;
+  font-size: 18px;
+  font-weight: bold;
+  color: #fff;
+}
+header p {
+  margin: 5px 0 0;
+  font-size: 13px;
+  color: #f2f2f2;
+}
 
-    .back-btn {
-      background: #007bff;
-      color: white;
-      border: none;
-      padding: 8px 14px;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 14px;
-      text-decoration: none;
-    }
-    .back-btn:hover { background: #0056b3; }
+.back-btn {
+  background: #9e8d6e;
+  color: white;
+  border: none;
+  padding: 8px 14px;
+  border-radius: 20px;
+  cursor: pointer;
+  font-size: 13px;
+  text-decoration: none;
+  transition: background 0.2s ease;
+}
+.back-btn:hover {
+  background: #7c6c51;
+}
 
-    .container { display: flex; flex: 1; overflow: hidden; height: 100%; }
-    .sidebar {
-      width: 220px; border-right: 1px solid #ccc;
-      background: #f4f4f4; overflow-y: auto; flex-shrink: 0;
-    }
-    .tab {
-      padding: 12px; cursor: pointer; border-bottom: 1px solid #ddd;
-    }
-    .tab.active {
-      background: #fff; font-weight: bold; border-left: 4px solid #007bff;
-    }
-    .content { flex: 1; display: flex; flex-direction: column; height: 100%; overflow: hidden; position: relative; }
-    .viewer, .about, .comments {
-      position: absolute; top: 0; left: 0; right: 0; bottom: 0;
-      width: 100%; height: 100%; overflow-y: auto;
-      padding: 20px; box-sizing: border-box;
-    }
-    .hidden { display: none; }
+/* === Layout === */
+.container {
+  display: flex;
+  flex: 1;
+  overflow: hidden;
+  height: 100%;
+}
 
-    /* --- Comments section --- */
-    .comment-form {
-      display: flex; gap: 10px; margin-bottom: 15px;
-    }
-    .comment-form input, .comment-form textarea {
-      padding: 8px; font-size: 14px; border: 1px solid #ccc; border-radius: 4px;
-    }
-    .comment-form input { width: 150px; }
-    .comment-form textarea { flex: 1; resize: vertical; min-height: 50px; }
-    .comment-form button {
-      background: #007bff; color: white; border: none;
-      padding: 8px 16px; border-radius: 4px; cursor: pointer;
-    }
-    .comment-form button:hover { background: #0056b3; }
+/* === Sidebar === */
+.sidebar {
+  width: 220px;
+  border-right: 1px solid #ddd;
+  background: #f0ede7;
+  overflow-y: auto;
+  flex-shrink: 0;
+}
 
-    .comment-list { margin-top: 10px; }
-    .comment-item {
-      border-bottom: 1px solid #ddd; padding: 8px 0;
-    }
-    .comment-meta { font-size: 12px; color: #666; }
+.tab {
+  padding: 12px;
+  cursor: pointer;
+  border-bottom: 1px solid #e5e0d8;
+  transition: background 0.2s ease;
+}
+.tab.active {
+  background: #fff;
+  font-weight: bold;
+  border-left: 4px solid #9e8d6e;
+}
+.tab:hover {
+  background: #eae6df;
+}
 
-    /* --- Reply styles --- */
-    .reply-list {
-      margin-left: 20px; margin-top: 5px;
-      border-left: 2px solid #eee; padding-left: 10px;
-    }
-    .reply-item {
-      margin-top: 5px; padding: 5px 0;
-      border-bottom: 1px dashed #ddd;
-    }
-    .reply-meta { font-size: 12px; color: #666; }
+/* === Content === */
+.content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  background: #fff;
+}
 
-    .reply-form {
-      margin-top: 8px; display: flex; flex-direction: column; gap: 5px;
-    }
-    .reply-form input, .reply-form textarea {
-      padding: 6px; font-size: 13px; border: 1px solid #ccc; border-radius: 4px;
-    }
-    .reply-form button {
-      align-self: flex-start;
-      background: #28a745; color: white; border: none;
-      padding: 6px 12px; border-radius: 4px; cursor: pointer;
-    }
-    .reply-form button:hover { background: #1e7e34; }
+.viewer, .about, .comments {
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  width: 100%; height: 100%;
+  overflow-y: auto;
+  padding: 20px;
+  box-sizing: border-box;
+}
+.hidden { display: none; }
 
-    .reply-link,
-    .toggle-replies {
-      font-size: 12px;
-      color: #007bff;
-      cursor: pointer;
-      margin-top: 5px;
-      display: inline-block;
-      margin-right: 12px; /* spacing between links */
-    }
+/* === Comment Section === */
+.comment-form {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 15px;
+}
+.comment-form input,
+.comment-form textarea {
+  padding: 8px;
+  font-size: 13px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  background: #fdfcfb;
+}
+.comment-form input {
+  width: 150px;
+}
+.comment-form textarea {
+  flex: 1;
+  resize: vertical;
+  min-height: 50px;
+}
+.comment-form button {
+  background: #C7B693;
+  color: white;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background 0.2s ease;
+}
+.comment-form button:hover {
+  background: #9e8d6e;
+}
 
-    .reply-link:hover,
-    .toggle-replies:hover {
-      text-decoration: underline;
-    }
+/* === Comments === */
+.comment-list { margin-top: 10px; }
+.comment-item {
+  border-bottom: 1px solid #eee;
+  padding: 8px 0;
+}
+.comment-meta {
+  font-size: 12px;
+  color: #777;
+}
+
+/* === Replies === */
+.reply-list {
+  margin-left: 20px;
+  margin-top: 5px;
+  border-left: 2px solid #eee;
+  padding-left: 10px;
+}
+.reply-item {
+  margin-top: 5px;
+  padding: 5px 0;
+  border-bottom: 1px dashed #ddd;
+}
+.reply-meta {
+  font-size: 12px;
+  color: #777;
+}
+
+.reply-form {
+  margin-top: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.reply-form input,
+.reply-form textarea {
+  padding: 6px;
+  font-size: 13px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+}
+.reply-form button {
+  align-self: flex-start;
+  background: #9e8d6e;
+  color: white;
+  border: none;
+  padding: 6px 12px;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background 0.2s ease;
+}
+.reply-form button:hover {
+  background: #7c6c51;
+}
+
+/* === Links (Reply / Show replies) === */
+.reply-link,
+.toggle-replies {
+  font-size: 12px;
+  color: #007bff;
+  cursor: pointer;
+  margin-top: 5px;
+  display: inline-block;
+  margin-right: 12px;
+}
+.reply-link:hover,
+.toggle-replies:hover {
+  text-decoration: underline;
+}
+
 
   </style>
 </head>
