--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link href = "/css/base.css" rel="stylesheet">
     <link href = "/css/index.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Tesseau is a section in FEU Roosevelt Rodriguez Campus. This website is made for its section to share study notes and reminders.">
+    <meta name="keywords" content="reviewers, study notes, reminders, Tesseau, students, FEU Roosevelt, Rodriguez Campus">
+    <meta name="author" content="Gerro Abarabar">
 
 </head>
 <body>
