--- a/reminders.html
+++ b/reminders.html
@@ -6,6 +6,8 @@
   <link href = "/css/base.css" rel="stylesheet">
   <link href = "css/reminders.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="/js/admin.js"></script>
+  
 
 </head>
 <body>
@@ -18,6 +20,18 @@
     </ul>
   </nav>
   <div class = "container">
-    <h1>Feature not yet created (SOON...)</h1>
+    <div class ="reminders-section">
+      <h1>Reminders</h1>
+      <div class="reminders-list" id="reminders-list">
+        <!-- Reminders will be loaded here -->
+      </div>
+    </div>
+  <div id = "add-reminder" class ="hidden">
+
+  </div>
+    <!-- <script src="/js/reminders.js" defer></script> -->
+    <script src="/js/reminders.js">
+    
+  </script>
   </div>
 </html>
