draft for reminders

--- a/about.html
+++ b/about.html
@@ -47,22 +47,25 @@
   <div class="page">
     <div class="container">
       <h1>About us</h1>
-      <p>Website for <strong>11 - Tesseau</strong> (S.Y. 2025-2026)</p>
+      <p>Website for <strong>11 - Tesseau (Tesla/Rousseau)</strong> (S.Y. 2025-2026)</p>
       <span class="image-container">
         <img src="/assets/me.jpg" alt="Gerro Abarabar" width="135" height="135">
       </span>
       <p>This is a simple website made by <strong>Gerro Abarabar of 11 - Tesla</strong></p>
-      <h2>Using the help of:</h2>
+      <blockquote>
+        <p>&ldquo;I don't know how to code html. Thanks chatgpt lmao&rdquo;</p>
+        <footer>&mdash; Gerro</footer>
+      </blockquote>
+      <h2>Purpose</h2>
+      <p>The purpose of this website is to provide a platform for students of 11 - Tesseau to share and review notes, as well as set reminders for their academic tasks. It aims to enhance collaboration and organization among students.</p>
+      <h2>This website is made using the help of:</h2>
       <ul>
         <li>ChatGPT - for coding assistance and suggestions</li>
         <li>GitHub Copilot - for code completion and ideas</li>
         <li>Google - for searching and learning</li>
         <li>Windsurf - for code completions</li>
       </ul>
-      <blockquote>
-        <p>&ldquo;I don't know how to code html. Thanks chatgpt lmao&rdquo;</p>
-        <footer>&mdash; Gerro</footer>
-      </blockquote>
+      
       <h2>Assets used</h2>
       <ul>
         <li>Mangro - Font</li>
