--- a/reminders.html
+++ b/reminders.html
@@ -17,11 +17,16 @@
       <li><a href="/notes_stuff/reviewers.html">Reviewers</a></li>
       <li><a href="/reminders.html">Reminders</a></li>
       <li><a href="/about.html">About</a></li>
-    </ul>
+    </ul> 
   </nav>
   <div class = "container">
     <div class ="reminders-section">
-      <h1>Reminders</h1>
+      <h1>Reminders</h1> 
+      <span id = "all" class = "section">All</span> | 
+      <span id = "tesla" class = "section">Tesla</span> | 
+      <span id = "rousseau" class = "section">Rousseau</span> 
+      <button id="addReminderBtn" class = "hidden">+ Add Reminder</button> 
+      <hr>
       <div class="reminders-list" id="reminders-list">
         <!-- Reminders will be loaded here -->
       </div>
