--- a/reminders.html
+++ b/reminders.html
@@ -11,16 +11,22 @@
 
 </head>
 <body>
-  <nav class="navbar">
-    <span class="logo"><a href="/">Tesseau</a></span>
-    <ul>
-      <li><a href="/notes_stuff/reviewers.html">Reviewers</a></li>
-      <li><a href="/reminders.html">Reminders</a></li>
-      <li><a href="/about.html">About</a></li>
-    </ul> 
-  </nav>
+  <div id="navbar-placeholder"></div>
+  <script>
+  fetch("/navbar.html")
+      .then(res => res.text())
+      .then(html => {
+          document.getElementById("navbar-placeholder").innerHTML = html;
+          // Manually run navbar.js after injection
+          const script = document.createElement("script");
+          script.src = "/js/navbar.js";
+          document.body.appendChild(script);
+      });
+  </script>
+  <script src="/js/navbar.js"></script>
   <div class = "container">
     <div class ="reminders-section">
+      <!--TODO: Add another page for past activities-->
       <h1>Reminders</h1> 
       <span id = "all" class = "section">All</span> | 
       <span id = "tesla" class = "section">Tesla</span> | 
