forgot to uncomment

--- a/notes_stuff/reviewers.html
+++ b/notes_stuff/reviewers.html
@@ -53,13 +53,12 @@
     <span id="currentPage">1</span>
     <button id="nextPage">→</button>
   </div>
-<!--TODO: Uncomment this: -->
   <!-- Google Identity Services + API Loader -->
-  <!-- <script src="https://apis.google.com/js/api.js"></script> -->
-  <!-- <script src="https://accounts.google.com/gsi/client" r></script> -->
+  <script src="https://apis.google.com/js/api.js"></script>
+  <script src="https://accounts.google.com/gsi/client" r></script>
 
 
-  <!-- <script src = "js/picker.js"></script> -->
+  <script src = "js/picker.js"></script>
 
   <!-- Review submission and viewing -->
   <script src="js/handleSubmit.js"></script>
