--- a/navbar.html
+++ b/navbar.html
@@ -24,6 +24,7 @@
             <li><a href="/reminders?section=rousseau">Rousseau</a></li>
         </ul>
         </li>
-        <li><a id="about" class="nav-link" href="/about.html">About</a></li>
+        <li class = "dropdown">
+            <a id="about" class="nav-link" href="/about.html">About</a></li>
     </ul> 
 </nav>
