added initial draft for index

--- a/navbar.html
+++ b/navbar.html
@@ -4,27 +4,27 @@
         <li class = "dropdown">
         <a id="nav-reviewers" class="nav-link" href="/notes_stuff/reviewers.html">Reviewers</a>
         <ul class="dropdown-menu">
-            <li><a href="/notes_stuff/reviewers.html">All Reviewers</a></li>
-            <li><a href="/notes_stuff/reviewers.html?subject=itp">Intro to Philosophy</a></li>
-            <li><a href="/notes_stuff/reviewers.html?subject=ess">Earth and Space 1</a></li>
-            <li><a href="/notes_stuff/reviewers.html?subject=fm">Finite Math 1</a></li>
-            <li><a href="/notes_stuff/reviewers.html?subject=e">English</a></li>
-            <li><a href="/notes_stuff/reviewers.html?subject=f">Filipino</a></li>
-            <li><a href="/notes_stuff/reviewers.html?subject=gm">General Math</a></li>
-            <li><a href="/notes_stuff/reviewers.html?subject=gs">General Science</a></li>
-            <li><a href="/notes_stuff/reviewers.html?subject=lcs">Life and Career Skills</a></li>
-            <li><a href="/notes_stuff/reviewers.html?subject=k">Kasaysayan</a></li>
+            <li><a href="/notes_stuff/reviewers">All Reviewers</a></li>
+            <li><a href="/notes_stuff/reviewers?subject=itp">Intro to Philosophy</a></li>
+            <li><a href="/notes_stuff/reviewers?subject=ess">Earth and Space 1</a></li>
+            <li><a href="/notes_stuff/reviewers?subject=fm">Finite Math 1</a></li>
+            <li><a href="/notes_stuff/reviewers?subject=e">English</a></li>
+            <li><a href="/notes_stuff/reviewers?subject=f">Filipino</a></li>
+            <li><a href="/notes_stuff/reviewers?subject=gm">General Math</a></li>
+            <li><a href="/notes_stuff/reviewers?subject=gs">General Science</a></li>
+            <li><a href="/notes_stuff/reviewers?subject=lcs">Life and Career Skills</a></li>
+            <li><a href="/notes_stuff/reviewers?subject=k">Kasaysayan</a></li>
             
         </ul>
         </li>
         <li class = "dropdown">
-        <a id="reminders" class="nav-link" href="/reminders.html">Reminders</a>
+        <a id="reminders" class="nav-link" href="/reminders">Reminders</a>
         <ul class = "dropdown-menu">
             <li><a href="/reminders?section=tesla">Tesla</a></li>
             <li><a href="/reminders?section=rousseau">Rousseau</a></li>
         </ul>
         </li>
         <li class = "dropdown">
-            <a id="about" class="nav-link" href="/about.html">About</a></li>
+            <a id="about" class="nav-link" href="/about">About</a></li>
     </ul> 
 </nav>
