--- a/reminders/index.html
+++ b/reminders/index.html
@@ -41,7 +41,7 @@
 
   </div>
     <!-- <script src="/js/reminders.js" defer></script> -->
-    <script src="/js/reminders.js">
+    <script src="js/reminders.js">
     
   </script>
   </div>
