--- a/notes_stuff/reviewers.html
+++ b/notes_stuff/reviewers.html
@@ -72,9 +72,9 @@
     <!-- Review submit form -->
     <form>
       <div class="form-row">
-        <input type="text" id="name" placeholder="Enter your name" />
-        <input type="text" id="title" placeholder="Enter your title" />
-        <select id="subject">
+        <input type="text" id="name" placeholder="Enter your name" required />
+        <input type="text" id="title" placeholder="Enter your title"  required />
+        <select id="subject" required >
           <option value="">-- Select Subject --</option>
           <option>Intro to Philosophy</option>
           <option>Earth and Space Science 1</option>
@@ -87,7 +87,7 @@
           <option>Pag-aaral ng Kasaysayan at Lipunang Pilipino</option>
         </select>
       </div>
-      <textarea id="description" placeholder="Enter your description"></textarea>
+      <textarea id="description" placeholder="Enter your description" required ></textarea>
       <button type="button" id="pickFile" onclick="handleAuthClick()">Pick Files</button>
       <button type="submit" onclick="handleSubmit(event)">Submit</button>
     </form>
