--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <div id="navbar-placeholder"></div>
     <script>
-    fetch("/navbar.html")
+    fetch("/widgets/navbar.html")
         .then(res => res.text())
         .then(html => {
             document.getElementById("navbar-placeholder").innerHTML = html;
@@ -29,7 +29,7 @@
         });
 
     </script>
-    <!-- TODO: Make it possible to make posts from admin panel -->
+    
 
 
     <div class="container">
