--- a/notes_stuff/reviewers.html
+++ b/notes_stuff/reviewers.html
@@ -11,7 +11,7 @@
 <body>
     <div id="navbar-placeholder"></div>
   <script>
-  fetch("/navbar.html")
+  fetch("/widgets/navbar.html")
     .then(res => res.text())
     .then(html => {
         document.getElementById("navbar-placeholder").innerHTML = html;
