--- a/widgets/navbar.html
+++ b/widgets/navbar.html
@@ -1,5 +1,8 @@
 <nav class="navbar">
-    <a id="tesseau" class="nav-link" href="/">Tesseau</a>
+    <a id="tesseau" class="nav-link" href="/">
+        <img src="/favicon.ico" class = "tesseau-logo" alt="Tesseau logo">
+        <span>Tesseau</span>
+    </a>
     <ul>
         <li class = "dropdown">
         <a id="nav-reviewers" class="nav-link" href="/notes_stuff/reviewers.html">Reviewers</a>
