added textarea for announcements

--- a/reminders/index.html
+++ b/reminders/index.html
@@ -26,6 +26,7 @@
   </script>
   <div class = "container">
     <div id = "add-reminder" class ="hidden"></div>
+    <textarea id="add-reminder-textarea" class="hidden" placeholder="The reminder will be seen here..." ></textarea>
     <div class ="reminders-section">
       <h1>Reminders</h1> 
       <span id = "all" class = "section">All</span> | 
@@ -36,13 +37,12 @@
       <div class="reminders-list" id="reminders-list">
         <!-- Reminders will be loaded here -->
       </div>
+    
     </div>
   
 
   </div>
     <!-- <script src="/js/reminders.js" defer></script> -->
-    <script src="js/reminders.js">
-    
-  </script>
+    <script src="js/reminders.js"></script>
   </div>
 </html>
