added some date changes

--- a/reminders/index.html
+++ b/reminders/index.html
@@ -32,7 +32,9 @@
       <span id = "all" class = "section">All</span> | 
       <span id = "tesla" class = "section">Tesla</span> | 
       <span id = "rousseau" class = "section">Rousseau</span> 
+      <input type=  "date" id="filterDate">
       <button id="addReminderBtn" class = "hidden">+ Add Reminder</button> 
+
       <hr>
       <div class="reminders-list" id="reminders-list">
         <!-- Reminders will be loaded here -->
