--- a/widgets/upload_box.html
+++ b/widgets/upload_box.html
@@ -1,8 +1,9 @@
-<div id="uploader">
-  <label for="fileInput"><strong>Attach a file</strong></label>
-  <input id="fileInput" type="file" />
-  <progress id="progressBar" value="0" max="100" hidden></progress>
-  <div id="status" class="status"></div>
+<div id="uploadBox">
+  <label for="fileInput">Choose file(s):</label>
+  <!-- add data-multiple="true" if you want multi-upload -->
+  <input id="fileInput" type="file" data-multiple="false" />
+  <progress id="uploadProgress" value="0" max="100"></progress>
+  <div id="uploadStatus"></div>
 </div>
 
 <!--
