--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 
     <div class="container">
       <h1>Welcome to Tesseau</h1>
-      <div class="posts" id="posts"></div>
+      <div id="posts"></div>
+      <span id="togglePostsBtn" class="load-more hidden">Load more…</span>
+
       <div class="editor-notes">
         <div class="section-title">Editor Notes</div>
         <div class="note">
